--- a/semana turistica.html
+++ b/semana turistica.html
@@ -15,7 +15,7 @@
 		height:180px;
 		margin:auto;
 	}
-	.articuloturismo{v    
+	.articuloturismo{
 		margin:0px auto;
 		background-color:aliceblue;
 		text-align:center;
@@ -56,7 +56,7 @@
 		<p>Con el fin de promover el pisco,la bebida bandera del Perù,productores del aguardiente de uva participaran en la 
          actividad denominada "un dia de cabalgata",que se desarolla hoy sabado en la ciudad de Ica,al sur de Lima,y en la          que participaran mas de 100 chalanes.
             </p>
-            <video src="file:///I|/video/Exhibición de Caballo Peruano de Paso.mp4" controls
+            <video src="video/Exhibición de Caballo Peruano de Paso.mp4" controls
             class="vidturismo">
            </video>
  		   </article>
@@ -66,21 +66,21 @@
            que el calificativo de "colorado", tiene su causa ene le color de lso lienzos con los que se encontraba enlucido
            al recinto.
            </p>
-           <video src="file:///I|/video/Ciudadela de Tambo Colorado.mp4" controls
+           <video src="video/Ciudadela de Tambo Colorado.mp4" controls
            class="vidturismo">
            </video>
            </article>
             <article class="articuloturismo">
              <h3>sand boarding </h3>
              <p>En el desierto de Pisco,podra practicar el sandboarding que es un deporte que consiste en el descenso de   						              dunas o cerros de arena,con tablas especiales parecidas a las del sandboarding; ademas de paseo en carro              tubulares.</p>
-              <video src="file:///I|/video/SAND BOARDING in Huacachina, Peru.mp4" controls
+              <video src="video/SAND BOARDING in Huacachina, Peru.mp4" controls
               class="vidturismo">
               </video>
               </article>
               <article class="articuloturismo">
               <h3>paracas</h3>
               <p>La reserva nacional de paracas fue declarada como tal el 25 de septiembre del año 1975.Fue creada con el                 fin de conservar una porcion del mar y del desierto del Perù, dando  proteccion a las diversas especies de                 flora y fauna silvestres de alli viven.</p>
-                 <video src="file:///I|/video/Reportaje al Perú  Paracas , reserva de felicidad.mp4" controls
+                 <video src="video/Testamento del primer productor de Pisco.mp4" controls
                  class="vidturismo">
                  </video>
                  </article>
